2010-06-28  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/drop_privileges.c (drop_privileges_error): Set format string
	when calling g_set_error.

2010-06-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/plugutils.c (plug_get_host_fqdn): Use plug_get_key to get
	vhosts from the KB; this forks if there is more than one vhost and
	results in a different return value in each fork.

2010-06-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_auth.c (openvas_authenticate_uuid): Added event logging
	to user authentication.

2010-06-25  Michael Wiegand <michael.wiegand@greenbone.net>

	* misc/openvas_logging.c: Added to elements to openvas_logging_t for
	syslog related configuration.
	(facility_int_from_string): New. Convenience
	function to convert a syslog facility string to its corresponding
	integer value.
	(openvas_log_func): Enable support for logging to syslog.

2010-06-22  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_abort_task): Remove.
	(omp_start_task): New function.  Rename from omp_get_status.

	* omp/omp.h: Update header accordingly.

2010-06-22  Michael Wiegand <michael.wiegand@greenbone.net>

	* base/CMakeLists.txt: Make sure drop_privileges.c gets build and
	drop_privileges.h gets installed.

2010-06-19  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/example.target.sources: Renamed to
	doc/example.target.locators.

2010-06-18  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* doc/example.auth.conf: More "OpenVAS" in example.

2010-06-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c: Replace GET_STATUS with GET_TASKS in comments.
	(omp_wait_for_task_start, omp_wait_for_task_end)
	(omp_wait_for_task_stop, omp_wait_for_task_delete): Use new name GET_TASKS
	in OMP.
	(omp_get_status): Remove.
	(omp_get_tasks): New function.  Rename from omp_get_status.

	* omp/omp.h: Update headers accordingly.

2010-06-17  Felix Wolfsteller <felix.wolfsteller@greenbone.net>
