@@ -84,7 +84,7 @@ include (CPack)
 message ("-- Variables will set...")
 
 set (CMAKE_BUILD                Debug)
-set (CMAKE_VERBOSE_MAKEFILE     ON)
+set (CMAKE_VERBOSE_MAKEFILE     OFF)
 
 if (NOT SYSCONFDIR)
   set (SYSCONFDIR "${CMAKE_INSTALL_PREFIX}/etc")
