@@ -1,5 +1,11 @@
 2010-06-28  Michael Wiegand <michael.wiegand@greenbone.net>
 
+	* base/CMakeLists.txt, hg/CMakeLists.txt, misc/CMakeLists.txt,
+	nasl/CMakeLists.txt, omp/CMakeLists.txt: Make CMake generated
+	Makefiles less verbose to make it easier to spot compiler warnings.
+
+2010-06-28  Michael Wiegand <michael.wiegand@greenbone.net>
+
 	* base/drop_privileges.c (drop_privileges_error): Set format string
 	when calling g_set_error.
 
